services/adb2c-user-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ofg-$ENV-$FACING-adb2c
  annotations:
    linkerd.io/inject: enabled
