services/adb2c-user-service/flagger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load
  namespace: ofg-$ENV-$FACING-adb2c
spec:
  selector:
    matchLabels:
      app: load
  replicas: 1
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: load
    spec:
      containers:
        - image: buoyantio/slow_cooker:1.2.0
          name: slow-cooker
          command: ["/bin/sh", "-c"]
          args:
            - |-
              slow_cooker -qps 10 -concurrency 10 -header  "Accept: application/json" -header "Content-Type: application/json" -method GET http://adb2c-user-service/Adb2cUser/e6a73f03-5ae0-4b0a-aa90-434e92f8634d
