services/adb2c-user-service/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: adb2c-user-service
  namespace: ofg-$ENV-$FACING-adb2c
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_set_header l5d-dst-override adb2c-user-service.ofg-$ENV-$FACING-adb2c.svc.cluster.local:80;
    #   grpc_set_header l5d-dst-override adb2c-user-service.ofg-$ENV-$FACING-adb2c.svc.cluster.local:80;
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - adb2c-user.$ENV.rercloud.co.uk
    secretName: adb2c-user-tls-cert
  rules:
    - host: adb2c-user.$ENV.rercloud.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: adb2c-user-service
              servicePort: 80
